--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel=“stylesheet”
-    href=“https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css”
-    integrity=“sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==”
-    crossorigin=“anonymous” referrerpolicy=“no-referrer” />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -23,7 +26,7 @@
   <!--main page-->
   <body class="page">
     <header class="page-header">
-      <div class="container">
+      <div class="container cont-pre">
         <nav class="nav">
           <a href="./index.html" class="logo link"
             ><span class="span">Web</span>Studio</a
@@ -68,7 +71,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">text</h2>
-          <ul class="section list">
+          <ul class="list">
             <li class="item">
               <h3 class="section-title">Strategy</h3>
               <p class="section-link">
@@ -104,7 +107,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section section-cont">
         <div class="container">
           <h2 class="section-pre-title">What are we doing</h2>
           <ul class="list">
@@ -121,7 +124,7 @@
         </div>
       </section>
 
-      <section class="section-item">
+      <section class="section section-item">
         <div class="container">
           <h2 class="section-pre-title">Our Team</h2>
           <ul class="list">
@@ -131,15 +134,17 @@
                 alt="photo Mark Guerrero"
                 width="264"
               />
-
-              <h3 class="section-team-title">Mark Guerrero</h3>
-              <p class="section-team-link">Product Designer</p>
+              <div class="text-team">
+                <h3 class="section-team-title">Mark Guerrero</h3>
+                <p class="section-team-link">Product Designer</p>
+              </div>
             </li>
             <li class="section-list">
               <img src="./images/img4.jpg" alt="photo Tom Ford" width="264" />
-
-              <h3 class="section-team-title">Tom Ford</h3>
-              <p class="section-team-link">Frontend Developer</p>
+              <div class="text-team">
+                <h3 class="section-team-title">Tom Ford</h3>
+                <p class="section-team-link">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-list">
               <img
@@ -147,9 +152,10 @@
                 alt="photo Camila Garcia"
                 width="264"
               />
-
-              <h3 class="section-team-title">Camila Garcia</h3>
-              <p class="section-team-link">Marketing</p>
+              <div class="text-team">
+                <h3 class="section-team-title">Camila Garcia</h3>
+                <p class="section-team-link">Marketing</p>
+              </div>
             </li>
             <li class="section-list">
               <img
@@ -157,9 +163,10 @@
                 alt="photo Daniel Wilson"
                 width="264"
               />
-
-              <h3 class="section-team-title">Daniel Wilson</h3>
-              <p class="section-team-link">UI Designer</p>
+              <div class="text-team">
+                <h3 class="section-team-title">Daniel Wilson</h3>
+                <p class="section-team-link">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -171,12 +178,11 @@
         <a href="./index.html" class="footer-logo link"
           ><span class="footer-span">Web</span>Studio</a
         >
-        <div class="footer-wrap">
-          <p class="footer-link">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+
+        <p class="footer-link">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
