--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,13 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap");
     </style>
-    <link rel=“stylesheet”
-    href=“https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css”
-    integrity=“sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==”
-    crossorigin=“anonymous” referrerpolicy=“no-referrer” />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -24,7 +27,7 @@
   <body class="page">
     <!--Шапка другої сторінкі-->
     <header class="page-header">
-      <div class="container">
+      <div class="container cont-pre">
         <nav class="nav">
           <a href="./index.html" class="logo link"
             ><span class="span">Web</span>Studio</a
@@ -54,10 +57,10 @@
     </header>
     <!--Основна 2 частина-->
     <main>
-      <section class="section">
+      <section class="section section-pre">
         <h1 class="visually-hidden">text</h1>
         <div class="container">
-          <ul class="section-list">
+          <ul class="section-pre-list">
             <li class="item">
               <button type="button" class="button-primary btn">All</button>
             </li>
@@ -87,9 +90,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Banking App Interface Concept</h2>
-              <p class="section-link">App</p>
+              <div class="gallery">
+                <h2 class="section-title">Banking App Interface Concept</h2>
+                <p class="section-link">App</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -98,9 +102,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Cashless Payment</h2>
-              <p class="section-link">Marketing</p>
+              <div class="gallery">
+                <h2 class="section-title">Cashless Payment</h2>
+                <p class="section-link">Marketing</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -109,9 +114,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Meditaion App</h2>
-              <p class="section-link">App</p>
+              <div class="gallery">
+                <h2 class="section-title">Meditaion App</h2>
+                <p class="section-link">App</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -120,9 +126,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Taxi Service</h2>
-              <p class="section-link">Marketing</p>
+              <div class="gallery">
+                <h2 class="section-title">Taxi Service</h2>
+                <p class="section-link">Marketing</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -131,9 +138,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Screen Illustrations</h2>
-              <p class="section-link">Design</p>
+              <div class="gallery">
+                <h2 class="section-title">Screen Illustrations</h2>
+                <p class="section-link">Design</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -142,9 +150,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Online Courses</h2>
-              <p class="section-link">Marketing</p>
+              <div class="gallery">
+                <h2 class="section-title">Online Courses</h2>
+                <p class="section-link">Marketing</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -153,9 +162,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Instagram Stories Concept</h2>
-              <p class="section-link">Design</p>
+              <div class="gallery">
+                <h2 class="section-title">Instagram Stories Concept</h2>
+                <p class="section-link">Design</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -164,9 +174,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Organic Food</h2>
-              <p class="section-link">Web Site</p>
+              <div class="gallery">
+                <h2 class="section-title">Organic Food</h2>
+                <p class="section-link">Web Site</p>
+              </div>
             </li>
             <li class="section-list-item">
               <img
@@ -175,9 +186,10 @@
                 width="360"
                 height="300"
               />
-
-              <h2 class="section-title">Fresh Coffee</h2>
-              <p class="section-link">Web Site</p>
+              <div class="gallery">
+                <h2 class="section-title">Fresh Coffee</h2>
+                <p class="section-link">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
