--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
       </section>
     </main>
-    <!--Підвал-->
+    <!--Footer-->
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="footer-logo link"
