--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
   </head>
   <!--Body variant 2-->
   <body class="page">
-    <!--Шапка другої сторінкі-->
+    <!--Header Portfolio-->
     <header class="page-header">
       <div class="container cont-pre">
         <nav class="nav">
@@ -55,7 +55,7 @@
         </address>
       </div>
     </header>
-    <!--Основна 2 частина-->
+    <!--Main Portfolio-->
     <main>
       <section class="section section-pre">
         <h1 class="visually-hidden">text</h1>
@@ -110,12 +110,12 @@
             <li class="section-list-item">
               <img
                 src="./images/img9.jpg"
-                alt="Meditaion App"
+                alt="Meditation App"
                 width="360"
                 height="300"
               />
               <div class="gallery">
-                <h2 class="section-title">Meditaion App</h2>
+                <h2 class="section-title">Meditation App</h2>
                 <p class="section-link">App</p>
               </div>
             </li>
@@ -195,7 +195,7 @@
         </div>
       </section>
     </main>
-    <!--Підвал другої сторінкі-->
+    <!--Footer Portfolio-->
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="footer-logo link"
